test/__snapshots__/SyntaxError.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxError basic 1`] = `"SyntaxError"`;

exports[`SyntaxError basic 2`] = `"SyntaxError: message"`;

exports[`SyntaxError basic 3`] = `"SyntaxError: message"`;

exports[`SyntaxError basic 4`] = `"SyntaxError: message"`;

exports[`SyntaxError basic 5`] = `"SyntaxError: reason"`;

exports[`SyntaxError basic 6`] = `"SyntaxError: message (1:1)"`;

exports[`SyntaxError basic 7`] = `
"SyntaxError: message (1:1)

> 1 | .class { invalid }
    | ^
"
`;

exports[`SyntaxError integration: errors 1`] = `
Array [
  [ModuleBuildError: Module build failed (from \`replaced original path\`):
SyntaxError: Unknown word (2:3)

  1 | .some {
> 2 |   invalid css;
    |   ^
  3 | }
  4 | 
],
]
`;

exports[`SyntaxError integration: warnings 1`] = `Array []`;
